# keyboard_c

./: CMakeLists.txt  CmakeListsForCPP.txt  ReadMe.md  main.c  readme.md
include/: keyboard_main.h
src/: keyboard.c
